--- a/population_by_districts.ipynb
+++ b/population_by_districts.ipynb
@@ -28,40 +28,40 @@
       "metadata": {
         "id": "e_NDqulmyHb3",
         "colab_type": "code",
-        "outputId": "fad87e81-a0bb-4ef9-d998-be2cdeaa586a",
+        "outputId": "f0eabe13-4a20-48d6-d9b8-492e35310d52",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 377
+          "height": 357
         }
       },
       "source": [
         "pip install requests-html"
       ],
-      "execution_count": 160,
+      "execution_count": 178,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: requests-html in /usr/local/lib/python3.6/dist-packages (0.10.0)\n",
-            "Requirement already satisfied: parse in /usr/local/lib/python3.6/dist-packages (from requests-html) (1.13.0)\n",
-            "Requirement already satisfied: w3lib in /usr/local/lib/python3.6/dist-packages (from requests-html) (1.21.0)\n",
-            "Requirement already satisfied: pyquery in /usr/local/lib/python3.6/dist-packages (from requests-html) (1.4.1)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from requests-html) (2.21.0)\n",
-            "Requirement already satisfied: pyppeteer>=0.0.14 in /usr/local/lib/python3.6/dist-packages (from requests-html) (0.0.25)\n",
-            "Requirement already satisfied: bs4 in /usr/local/lib/python3.6/dist-packages (from requests-html) (0.0.1)\n",
             "Requirement already satisfied: fake-useragent in /usr/local/lib/python3.6/dist-packages (from requests-html) (0.1.11)\n",
-            "Requirement already satisfied: six>=1.4.1 in /usr/local/lib/python3.6/dist-packages (from w3lib->requests-html) (1.12.0)\n",
-            "Requirement already satisfied: lxml>=2.1 in /usr/local/lib/python3.6/dist-packages (from pyquery->requests-html) (4.2.6)\n",
-            "Requirement already satisfied: cssselect>0.7.9 in /usr/local/lib/python3.6/dist-packages (from pyquery->requests-html) (1.1.0)\n",
-            "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->requests-html) (2.8)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->requests-html) (2019.11.28)\n",
-            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->requests-html) (3.0.4)\n",
-            "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->requests-html) (1.24.3)\n",
-            "Requirement already satisfied: appdirs in /usr/local/lib/python3.6/dist-packages (from pyppeteer>=0.0.14->requests-html) (1.4.3)\n",
+            "Requirement already satisfied: bs4 in /usr/local/lib/python3.6/dist-packages (from requests-html) (0.0.1)\n",
+            "Requirement already satisfied: pyppeteer>=0.0.14 in /usr/local/lib/python3.6/dist-packages (from requests-html) (0.0.25)\n",
+            "Requirement already satisfied: w3lib in /usr/local/lib/python3.6/dist-packages (from requests-html) (1.21.0)\n",
+            "Requirement already satisfied: parse in /usr/local/lib/python3.6/dist-packages (from requests-html) (1.13.0)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from requests-html) (2.21.0)\n",
+            "Requirement already satisfied: pyquery in /usr/local/lib/python3.6/dist-packages (from requests-html) (1.4.1)\n",
+            "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.6/dist-packages (from bs4->requests-html) (4.6.3)\n",
+            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.6/dist-packages (from pyppeteer>=0.0.14->requests-html) (1.24.3)\n",
             "Requirement already satisfied: websockets in /usr/local/lib/python3.6/dist-packages (from pyppeteer>=0.0.14->requests-html) (8.1)\n",
+            "Requirement already satisfied: appdirs in /usr/local/lib/python3.6/dist-packages (from pyppeteer>=0.0.14->requests-html) (1.4.3)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.6/dist-packages (from pyppeteer>=0.0.14->requests-html) (4.28.1)\n",
             "Requirement already satisfied: pyee in /usr/local/lib/python3.6/dist-packages (from pyppeteer>=0.0.14->requests-html) (6.0.0)\n",
-            "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.6/dist-packages (from bs4->requests-html) (4.6.3)\n"
+            "Requirement already satisfied: six>=1.4.1 in /usr/local/lib/python3.6/dist-packages (from w3lib->requests-html) (1.12.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->requests-html) (2019.11.28)\n",
+            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->requests-html) (3.0.4)\n",
+            "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->requests-html) (2.8)\n",
+            "Requirement already satisfied: cssselect>0.7.9 in /usr/local/lib/python3.6/dist-packages (from pyquery->requests-html) (1.1.0)\n",
+            "Requirement already satisfied: lxml>=2.1 in /usr/local/lib/python3.6/dist-packages (from pyquery->requests-html) (4.2.6)\n"
           ],
           "name": "stdout"
         }
@@ -116,7 +116,7 @@
       "metadata": {
         "id": "EoS9IVnPsmLl",
         "colab_type": "code",
-        "outputId": "1e801784-f842-4546-836b-c05d92b81356",
+        "outputId": "96e29b4b-5598-4976-f94a-9ef1831684e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -126,7 +126,7 @@
         "links = my_table.findAll('td')\n",
         "links[:5]"
       ],
-      "execution_count": 164,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -143,7 +143,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 164
+          "execution_count": 182
         }
       ]
     },
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "PeALcb1WtvTS",
         "colab_type": "code",
-        "outputId": "bcdc22af-cf7e-4d03-dc50-3c9bb62ebe93",
+        "outputId": "82293b80-188a-473b-8977-00c3b0c4b811",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -166,7 +166,7 @@
         "\n",
         "      break\n"
       ],
-      "execution_count": 165,
+      "execution_count": 183,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,11 +182,7 @@
       "metadata": {
         "id": "DbiPjP-grTGZ",
         "colab_type": "code",
-        "outputId": "e765dc3c-25d8-46c8-a0c7-5074af425439",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 197
-        }
+        "colab": {}
       },
       "source": [
         "#District\tPopulation (2018)\tArea (km²)\tDensity (per km²)\n",
@@ -208,20 +204,8 @@
         "    Density.append(word.get_text().replace(',', '').strip())\n",
         "  i+=1\n"
       ],
-      "execution_count": 172,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-172-932a6ffed6cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mDensity\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m   \u001b[0mi\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mDistrict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'title'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'get'"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -232,12 +216,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "73e3593c-43ea-4633-b62b-485c51cd2d84"
+        "outputId": "8ef6f786-177d-43a6-9bd5-84a78dcc0822"
       },
       "source": [
         "District[0]"
       ],
-      "execution_count": 174,
+      "execution_count": 185,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,22 +233,9 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 174
+          "execution_count": 185
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UGVCaKFzsQsC",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -275,7 +246,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "05febef0-d508-4a57-8717-e40678382ab9"
+        "outputId": "1bc36c8f-c31a-4e27-9bad-b8fad779a82e"
       },
       "source": [
         "df = pd.DataFrame()\n",
@@ -287,7 +258,7 @@
         "df = df.iloc[:-4,]\n",
         "df.head()"
       ],
-      "execution_count": 176,
+      "execution_count": 186,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,7 +340,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 176
+          "execution_count": 186
         }
       ]
     },
@@ -382,19 +353,6 @@
       },
       "source": [
         " df.to_csv('population_by_districts.csv', index=False)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mE9-A6tzLui3",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
       ],
       "execution_count": 0,
       "outputs": []
